--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
+
+# FRONTEND_URL=http://localhost:3000
+# MONGO_URL=mongodb://localhost:27017/CodeArena
+MONGO_URL=mongodb+srv://mebhikhelega:adminbolte@cluster0.3sqk8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=your-jwt-secret
 PORT=5000
 FRONTEND_URL=http://localhost:3000
-MONGO_URL=mongodb://localhost:27017/CodeArena
-JWT_SECRET=jaiBholeBhandari
