--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 MONGO_URL=mongodb+srv://mebhikhelega:adminbolte@cluster0.3sqk8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your-jwt-secret
 PORT=5000
-FRONTEND_URL=http://CodeArena.vercel.app
+FRONTEND_URL=https://codearena-o64w.onrender.com
